Expérimentation repas végétarien

--- a/web/templates/vue-app.html
+++ b/web/templates/vue-app.html
@@ -21,6 +21,7 @@
         window.MATOMO_ID = "{% matomo_id %}";
         window.ENVIRONMENT = "{% environment %}"
         window.ENABLE_XP_RESERVATION = "{% enable_xp_reservation %}" === "True"
+        window.ENABLE_XP_VEGE = "{% enable_xp_vege %}" === "True"
         window.ENABLE_PARTNERS = "{% enable_partners %}" === "True"
     </script>
     <style>
