Ajout du champ numéro téléphone dans la création de compte

--- a/web/templates/auth/register.html
+++ b/web/templates/auth/register.html
@@ -40,7 +40,7 @@
                     {% endfor %}
                 {% endif %}
             </div>
-            {% if field.name == 'email' or field.name == 'management_type' %}
+            {% if field.name == 'phone_number' or field.name == 'management_type' %}
             <hr />
             {% endif %}
             {% endfor %}
