Update login url on other pages

--- a/web/templates/auth/password_reset_complete.html
+++ b/web/templates/auth/password_reset_complete.html
@@ -6,5 +6,5 @@
     <h2>Mot de passe réinitialisé avec succès</h2>
 
     <p>Vous êtes maintenant identifié. Vous pouvez accèder à votre espace Ma Cantine.</p>
-    <a href="{% url 'login' %}"><button>M'identifier chez Ma Cantine</button></a>
+    <a href="/s-identifier"><button>M'identifier chez Ma Cantine</button></a>
 {% endblock %}
