--- a/web/templates/auth/register.html
+++ b/web/templates/auth/register.html
@@ -53,5 +53,5 @@
             </div>
         </div>
     </form>
-    <a href="{% url 'login' %}"><button>J'ai déjà un compte</button></a>
+    <a href="/s-identifier"><button>J'ai déjà un compte</button></a>
 {% endblock %}
