--- a/web/templates/magicauth/login_magicauth.html
+++ b/web/templates/magicauth/login_magicauth.html
@@ -46,7 +46,7 @@
         </div>
     </form>
     <hr />
-    <p style="font-size: 0.85em; margin-top: 20px;"><a href="{% url 'login' %}">Me connecter avec mon mot de passe</a></p>
+    <p style="font-size: 0.85em; margin-top: 20px;"><a href="/s-identifier">Me connecter avec mon mot de passe</a></p>
     <p style="font-size: 0.85em; margin-top: 20px;"><a href="{% url 'register' %}">Créer mon compte</a></p>
     <p style="font-size: 0.85em; margin-top: 20px;"><a href="{% url 'password_reset' %}">J'ai perdu mon mot de passe</a></p>
 {% endblock %}
