Add user email if logged in

--- a/web/templates/vue-app.html
+++ b/web/templates/vue-app.html
@@ -37,6 +37,17 @@
         window.ENABLE_XP_VEGE = "{% enable_xp_vege %}" === "True"
         window.ENABLE_PARTNERS = "{% enable_partners %}" === "True"
     </script>
+
+    <script type="text/javascript">
+        window.$crisp=[];
+        window.CRISP_WEBSITE_ID="071cca61-bd5f-4950-a5ed-c02238666a5c";
+        (function(){
+            d=document;
+            s=d.createElement("script");
+            s.src="https://client.crisp.chat/l.js";
+            s.async=1;d.getElementsByTagName("head")[0].appendChild(s);
+        })();
+    </script>
     <style>
         @font-face {
             font-family: 'Marianne';
