--- a/web/templates/auth/register.html
+++ b/web/templates/auth/register.html
@@ -3,6 +3,7 @@
 {% load static %}
 
 {% block content %}
+<script type="text/javascript"> window.$crisp=[];window.CRISP_WEBSITE_ID="071cca61-bd5f-4950-a5ed-c02238666a5c";(function(){ d=document;s=d.createElement("script"); s.src="https://client.crisp.chat/l.js"; s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})(); </script>
 <script type="text/javascript" src="{% static 'admin/js/vendor/jquery/jquery.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/jquery.easy-autocomplete.min.js' %}"></script>
 <style type="text/css"> @import url("{% static 'css/easy-autocomplete.min.css' %}"); </style>
