Omits Ajax request if username is populated

--- a/web/templates/auth/register.html
+++ b/web/templates/auth/register.html
@@ -94,6 +94,9 @@
             const emailField = document.getElementById("id_email")
 
             function populateUsername() {
+                if (!!usernameField.value)
+                    return
+
                 firstName = firstNameField.value
                 lastName = lastNameField.value
                 email = emailField.value
