--- a/web/static/css/auth.css
+++ b/web/static/css/auth.css
@@ -156,7 +156,7 @@ input[type="checkbox"]#id_cgu_approved {
 }
 
 #wrapper.columns {
-  width: 1005px;
+  width: 805px;
 }
 
 .column-wrapper {
@@ -170,7 +170,7 @@ input[type="checkbox"]#id_cgu_approved {
 }
 
 .left-column {
-  padding-top: 20px;
+  padding-top: 0px;
 }
 
 .sector,
@@ -182,6 +182,32 @@ input[type="checkbox"]#id_cgu_approved {
 .management-type > li {
   width: 45%;
   float: left;
+}
+
+.register-top-text {
+  margin-bottom: 30px;
+  margin-top: 0;
+  text-align: left;
+  line-height: 24px;
+}
+
+.register-top-text > p {
+  font-size: 15px;
+}
+
+input.cantine-number-input {
+  display: inline-block;
+  width: 100px;
+  border-top: solid 1px #ecececba;
+  border-left: solid 1px #ecececba;
+  border-right: solid 1px #ecececba;
+  border-bottom: solid 2px #737373;
+  border-radius: 10px 10px 3px 3px;
+  margin-left: 15px;
+}
+
+.cgu-right-column > div {
+  margin-top: 40px;
 }
 
 @media (max-width: 1005px) {
