Adds number_of_managed_cantines field to user

--- a/web/static/css/auth.css
+++ b/web/static/css/auth.css
@@ -195,6 +195,12 @@ input[type="checkbox"]#id_cgu_approved {
   font-size: 15px;
 }
 
+label[for="id_number_of_managed_cantines"] {
+  display: inline-block;
+  font-size: 15px;
+  margin: 0;
+}
+
 input.cantine-number-input {
   display: inline-block;
   width: 100px;
