Direct to new cantine

--- a/web/templates/auth/register_send_mail_failed.html
+++ b/web/templates/auth/register_send_mail_failed.html
@@ -8,5 +8,5 @@
         Une erreur s'est produite à l'envoi du mail de confirmation de création de compte.<br/>
         Nous vous invitons à réessayer ultérieurement ou à nous contacter.
     </p>
-    <p><a href="/"><button>Revenir à l'accueil</button></a></p>
+    <p><a href="/nouvelle-cantine"><button>Revenir à l'accueil</button></a></p>
 {% endblock %}
