--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -28,7 +28,7 @@
             <div id="wrapper" {% if form.uses_columns %}class="columns"{% endif %}>
                 <h1 id="ma-cantine">
                     <a href="/">
-                        <img src="{% static 'images/logo_transparent.png' %}" alt="ma cantine" class="auth_logo" />
+                        <img src="{% static 'images/header-logos-extended.png' %}" alt="ma cantine" class="auth_logo" />
                     </a>
                 </h1>
                 {% block content %}
