--- a/web/templates/vue-app.html
+++ b/web/templates/vue-app.html
@@ -26,7 +26,7 @@
 
     <link rel="icon" type="image/png" href="{% static 'images/favicon-macantine.png' %}">
 
-    <title>ma-cantine.beta.gouv.fr</title>
+    <title>ma cantine</title>
     <meta name="description" content="Pour une alimentation saine, de qualité et plus durable dans nos assiettes grâce à EGAlim">
     <link rel="stylesheet" href="{% static 'css/materialdesignicons.min.css' %}">
     <script type="text/javascript">
