MAJ langage du site

--- a/web/templates/vue-app.html
+++ b/web/templates/vue-app.html
@@ -4,7 +4,7 @@
 {% load featureflags %}
 {% load render_bundle from webpack_loader %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="utf-8">
