Rename field value_sustainable_ht into value_siqo_ht

--- a/api/templates/subscription_beta_tester.html
+++ b/api/templates/subscription_beta_tester.html
@@ -45,7 +45,7 @@
             <b>Qualité des produits :</b>
             <ul>
                 <li>Bio - Valeur annuelle HT : <i>{{ measures|get_item:"value_bio_ht" }} €</i></li>
-                <li>Produits durables (hors bio) - Valeur annuelle HT : <i>{{ measures|get_item:"value_sustainable_ht" }} €</i></li>
+                <li>Produits durables (hors bio) - Valeur annuelle HT : <i>{{ measures|get_item:"value_siqo_ht" }} €</i></li>
                 <li>Valeur totale annuelle HT : <i>{{ measures|get_item:"value_total_ht" }} €</i></li>
             </ul>
         </p>
