Revert 'Rename field value_sustainable_ht into value_siqo_ht' This reverts commit 1d1d385fcc2d75c75350d7000980f829577e714f.

--- a/api/templates/teledeclaration_pdf.html
+++ b/api/templates/teledeclaration_pdf.html
@@ -76,7 +76,7 @@
                 <span>Valeur en HT des achats alimentaires en Bio</span> : {{ value_bio_ht|floatformat:2 }} €
             </li>
             <li>
-                <span>Valeur en HT d'autres produits de qualité et durables</span> : {{ value_siqo_ht|floatformat:2 }} €
+                <span>Valeur en HT d'autres produits de qualité et durables</span> : {{ value_sustainable_ht|floatformat:2 }} €
             </li>
         </ul>
 
