--- a/api/templates/teledeclaration_pdf.html
+++ b/api/templates/teledeclaration_pdf.html
@@ -224,7 +224,7 @@
             </li>
         </ul>
         <p>
-            Achats HVE
+            Achats Certification environnementale de niveau 2 ou HVE
         </p>
         <ul>
             <li>
