Fix missing accent 'Équitable' and completes label HVE

--- a/api/templates/teledeclaration_pdf.html
+++ b/api/templates/teledeclaration_pdf.html
@@ -224,32 +224,32 @@
             </li>
         </ul>
         <p>
-            Achats Certification environnementale de niveau 2 ou HVE
+            Achats Certification Environnementale de Niveau 2 ou HVE
         </p>
         <ul>
             <li>
-                <span>Viandes et volailles HVE</span> : {% if not value_viandes_volailles_hve is None %}{{ value_viandes_volailles_hve|floatformat:2 }}{% else %}—{% endif %} €
+                <span>Viandes et volailles Certification Environnementale de Niveau 2 ou HVE</span> : {% if not value_viandes_volailles_hve is None %}{{ value_viandes_volailles_hve|floatformat:2 }}{% else %}—{% endif %} €
             </li>
             <li>
-                <span>Poissons et produits de la mer HVE</span> : {% if not value_produits_de_la_mer_hve is None %}{{ value_produits_de_la_mer_hve|floatformat:2 }}{% else %}—{% endif %} €
+                <span>Poissons et produits de la mer Certification Environnementale de Niveau 2 ou HVE</span> : {% if not value_produits_de_la_mer_hve is None %}{{ value_produits_de_la_mer_hve|floatformat:2 }}{% else %}—{% endif %} €
             </li>
             <li>
-                <span>Fruits et légumes HVE</span> : {% if not value_fruits_et_legumes_hve is None %}{{ value_fruits_et_legumes_hve|floatformat:2 }}{% else %}—{% endif %} €
+                <span>Fruits et légumes Certification Environnementale de Niveau 2 ou HVE</span> : {% if not value_fruits_et_legumes_hve is None %}{{ value_fruits_et_legumes_hve|floatformat:2 }}{% else %}—{% endif %} €
             </li>
             <li>
-                <span>Charcuterie HVE</span> : {% if not value_charcuterie_hve is None %}{{ value_charcuterie_hve|floatformat:2 }}{% else %}—{% endif %} €
+                <span>Charcuterie Certification Environnementale de Niveau 2 ou HVE</span> : {% if not value_charcuterie_hve is None %}{{ value_charcuterie_hve|floatformat:2 }}{% else %}—{% endif %} €
             </li>
             <li>
-                <span>Produits laitiers HVE</span> : {% if not value_produits_laitiers_hve is None %}{{ value_produits_laitiers_hve|floatformat:2 }}{% else %}—{% endif %} €
+                <span>Produits laitiers Certification Environnementale de Niveau 2 ou HVE</span> : {% if not value_produits_laitiers_hve is None %}{{ value_produits_laitiers_hve|floatformat:2 }}{% else %}—{% endif %} €
             </li>
             <li>
-                <span>Boulangerie HVE</span> : {% if not value_boulangerie_hve is None %}{{ value_boulangerie_hve|floatformat:2 }}{% else %}—{% endif %} €
+                <span>Boulangerie Certification Environnementale de Niveau 2 ou HVE</span> : {% if not value_boulangerie_hve is None %}{{ value_boulangerie_hve|floatformat:2 }}{% else %}—{% endif %} €
             </li>
             <li>
-                <span>Boissons HVE</span> : {% if not value_boissons_hve is None %}{{ value_boissons_hve|floatformat:2 }}{% else %}—{% endif %} €
+                <span>Boissons Certification Environnementale de Niveau 2 ou HVE</span> : {% if not value_boissons_hve is None %}{{ value_boissons_hve|floatformat:2 }}{% else %}—{% endif %} €
             </li>
             <li>
-                <span>Autres produits HVE</span> : {% if not value_autres_hve is None %}{{ value_autres_hve|floatformat:2 }}{% else %}—{% endif %} €
+                <span>Autres produits Certification Environnementale de Niveau 2 ou HVE</span> : {% if not value_autres_hve is None %}{{ value_autres_hve|floatformat:2 }}{% else %}—{% endif %} €
             </li>
         </ul>
         <p>
@@ -311,32 +311,32 @@
             </li>
         </ul>
         <p>
-            Achats Commerce Equitable
+            Achats Commerce Équitable
         </p>
         <ul>
             <li>
-                <span>Viandes et volailles Commerce Equitable</span> : {% if not value_viandes_volailles_commerce_equitable is None %}{{ value_viandes_volailles_commerce_equitable|floatformat:2 }}{% else %}—{% endif %} €
+                <span>Viandes et volailles Commerce Équitable</span> : {% if not value_viandes_volailles_commerce_equitable is None %}{{ value_viandes_volailles_commerce_equitable|floatformat:2 }}{% else %}—{% endif %} €
             </li>
             <li>
-                <span>Poissons et produits de la mer Commerce Equitable</span> : {% if not value_produits_de_la_mer_commerce_equitable is None %}{{ value_produits_de_la_mer_commerce_equitable|floatformat:2 }}{% else %}—{% endif %} €
+                <span>Poissons et produits de la mer Commerce Équitable</span> : {% if not value_produits_de_la_mer_commerce_equitable is None %}{{ value_produits_de_la_mer_commerce_equitable|floatformat:2 }}{% else %}—{% endif %} €
             </li>
             <li>
-                <span>Fruits et légumes Commerce Equitable</span> : {% if not value_fruits_et_legumes_commerce_equitable is None %}{{ value_fruits_et_legumes_commerce_equitable|floatformat:2 }}{% else %}—{% endif %} €
+                <span>Fruits et légumes Commerce Équitable</span> : {% if not value_fruits_et_legumes_commerce_equitable is None %}{{ value_fruits_et_legumes_commerce_equitable|floatformat:2 }}{% else %}—{% endif %} €
             </li>
             <li>
-                <span>Charcuterie Commerce Equitable</span> : {% if not value_charcuterie_commerce_equitable is None %}{{ value_charcuterie_commerce_equitable|floatformat:2 }}{% else %}—{% endif %} €
+                <span>Charcuterie Commerce Équitable</span> : {% if not value_charcuterie_commerce_equitable is None %}{{ value_charcuterie_commerce_equitable|floatformat:2 }}{% else %}—{% endif %} €
             </li>
             <li>
-                <span>Produits laitiers Commerce Equitable</span> : {% if not value_produits_laitiers_commerce_equitable is None %}{{ value_produits_laitiers_commerce_equitable|floatformat:2 }}{% else %}—{% endif %} €
+                <span>Produits laitiers Commerce Équitable</span> : {% if not value_produits_laitiers_commerce_equitable is None %}{{ value_produits_laitiers_commerce_equitable|floatformat:2 }}{% else %}—{% endif %} €
             </li>
             <li>
-                <span>Boulangerie Commerce Equitable</span> : {% if not value_boulangerie_commerce_equitable is None %}{{ value_boulangerie_commerce_equitable|floatformat:2 }}{% else %}—{% endif %} €
+                <span>Boulangerie Commerce Équitable</span> : {% if not value_boulangerie_commerce_equitable is None %}{{ value_boulangerie_commerce_equitable|floatformat:2 }}{% else %}—{% endif %} €
             </li>
             <li>
-                <span>Boissons Commerce Equitable</span> : {% if not value_boissons_commerce_equitable is None %}{{ value_boissons_commerce_equitable|floatformat:2 }}{% else %}—{% endif %} €
+                <span>Boissons Commerce Équitable</span> : {% if not value_boissons_commerce_equitable is None %}{{ value_boissons_commerce_equitable|floatformat:2 }}{% else %}—{% endif %} €
             </li>
             <li>
-                <span>Autres produits Commerce Equitable</span> : {% if not value_autres_commerce_equitable is None %}{{ value_autres_commerce_equitable|floatformat:2 }}{% else %}—{% endif %} €
+                <span>Autres produits Commerce Équitable</span> : {% if not value_autres_commerce_equitable is None %}{{ value_autres_commerce_equitable|floatformat:2 }}{% else %}—{% endif %} €
             </li>
         </ul>
         <p>
