Replace le favicon

--- a/web/templates/vue-app.html
+++ b/web/templates/vue-app.html
@@ -24,7 +24,7 @@
     <meta name="twitter:image" content="{% hostname %}{% static 'images/card-social-media.png' %}">
     <meta name="twitter:card" content="summary_large_image">
 
-    <link rel="icon" type="image/png" href="{% static 'images/favicon-macantine.png' %}">
+    <link rel="icon" type="image/png" href="{% static 'images/favicon-marianne.png' %}">
 
     <title>ma cantine</title>
     <meta name="description" content="Pour une alimentation saine, de qualité et plus durable dans nos assiettes grâce à EGAlim">
