--- a/web/static/css/auth.css
+++ b/web/static/css/auth.css
@@ -62,7 +62,7 @@ p {
   width: 300px;
   box-shadow: 0px 0px 1px rgba(24, 25, 38, 0.76), 0px 16px 24px rgba(24, 25, 38, 0.12), inset 0px 2px 1px #ffffff,
     inset 0px -2px 1px rgba(0, 0, 0, 0.08);
-  border-radius: 16px;
+  border-radius: 0px;
 }
 .control-group {
   text-align: left;
@@ -78,14 +78,14 @@ select,
   height: 42px;
   box-sizing: border-box;
   border: 1px solid #b2b5c2;
-  border-radius: 12px;
+  border-radius: 0px;
   outline: none;
   padding: 0 12px;
 }
 input[type="text"]:focus,
 input[type="password"]:focus,
 input[type="email"]:focus {
-  border: 2px solid #0c7f46;
+  border: 2px solid #000091;
 }
 label {
   display: block;
@@ -97,7 +97,7 @@ button {
   padding: 10px;
   box-shadow: 0px 0.5px 1px rgba(24, 25, 38, 0.21), inset 0px 1px 0.5px rgba(255, 255, 255, 0.32),
     inset 0px -1px 0.5px rgba(24, 25, 38, 0.32);
-  border-radius: 12px;
+  border-radius: 0px;
   border: solid 1px #ddd;
   cursor: pointer;
   max-width: 300px;
@@ -108,19 +108,19 @@ button {
 }
 button[type="submit"] {
   border: none;
-  background: #0c7f46;
+  background: #000091;
   color: white;
 }
 button[type="submit"]:hover {
   border: none;
-  background: #0c7f46;
+  background: #000091;
 }
 .messages,
 .error-container {
   text-align: left;
   font-size: 0.85em;
   padding: 10px;
-  border-radius: 5px;
+  border-radius: 0px;
   margin-bottom: 20px;
 }
 .messages {
@@ -208,7 +208,7 @@ input.cantine-number-input {
   border-left: solid 1px #ecececba;
   border-right: solid 1px #ecececba;
   border-bottom: solid 2px #737373;
-  border-radius: 10px 10px 3px 3px;
+  border-radius: 0;
   margin-left: 15px;
 }
 
