Ajout du favicon aux pages auth

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -7,6 +7,8 @@
         <title>{% block title %}{% endblock %} - ma-cantine.beta.gouv.fr</title>
         <link rel="stylesheet" href="{% static 'css/auth.css' %}">
 
+        <link rel="icon" type="image/png" href="{% static 'images/favicon-marianne.png' %}">
+
         <!-- Matomo -->
         <script type="text/javascript">
             var _paq = window._paq || [];
